--- a/css/style.css
+++ b/css/style.css
@@ -523,10 +523,6 @@ body {
   display: block;
 }
 
-.input-border-false {
-  border: 1px solid #c98e99;
-}
-
 .in__width {
   height: 83px;
   margin-bottom: 30px;
@@ -544,14 +540,14 @@ body {
 }
 
 .input-text-false {
-  display: block;
+  display: none;
   font-size: 13px;
   line-height: 18px;
   color: #c98e99;
 }
 
 .check {
-  display: block;
+  display: none;
   width: 20px;
   height: 15px;
   position: absolute;
@@ -698,16 +694,13 @@ body {
   width: 150px;
   height: 50px;
   border: none;
+  background: url(../img/svg/btn-false.svg) no-repeat center;
 }
 
 .button-in__next-text {
   position: relative;
   right: 9px;
   color: white;
-}
-
-.button-in__next-false {
-  background: url(../img/svg/btn-false.svg) no-repeat center;
 }
 
 .user {
@@ -764,18 +757,18 @@ body {
   box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.25);
   border-radius: 6px;
   color: white;
-  
+
   position: absolute;
   bottom: 54px;
   left: 130px;
 }
 
 .button-user__send:hover {
-  background-color: #3E8FF2;
+  background-color: #3e8ff2;
 }
 
 .button-user__send:active {
-  background-color: #256FCA;
+  background-color: #256fca;
 }
 
 .btn-grp {
@@ -791,11 +784,55 @@ body {
   transition: 0.3s;
 }
 
-.btn:active, .btn:hover, .btn:focus {
+.btn:active,
+.btn:hover,
+.btn:focus {
   border: 3px solid orange;
   font-size: 22px;
 }
 
-.btn1, .btn2 {
+.btn1,
+.btn2,
+.btn3 {
   background: wheat;
+}
+
+.out {
+  width: 490px;
+  height: 330px;
+  background: white;
+  display: none;
+}
+
+.out__wrapper {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-content: flex-start;
+}
+
+.out__title,
+.out__mail,
+.out__phone {
+  text-align: center;
+  margin-bottom: 34px;
+}
+
+.out__title {
+  margin-top: 39px;
+}
+
+.out__title,
+.out__name,
+.out__number {
+  font-weight: bold;
+  font-size: 26px;
+  line-height: 35px;
+}
+
+.out__number,
+.out__mail-user,
+.out__phone-user {
+  color: #458ae1;
 }
